Make tables horizontally scrollable and prevent `th` text wrapping

--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,8 @@ table {
   font-size: 12px;
   margin: 2em 0;
   overflow: auto;
+  display: block;
+  width: fit-content;
 }
 
 table,
@@ -172,6 +174,10 @@ th,
 td {
   border: 2px solid #4a4843;
   border-collapse: collapse;
+}
+
+th {
+  text-wrap: nowrap;
 }
 
 th,
